fixes gutters on mobile (again), adds style to number callouts on main page

--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
 Blue: #4fc6e0;
 Pink: #f06798;
 Grey: #e6e6e6;
-Green: #	;
+Green: #c1d831	;
 Box-Shadow: gray;
 
 
@@ -174,8 +174,20 @@ a.navbar-brand {padding-right: 1em;}
 .subtitle { font-size: 1.2em; }
 
 
+/* ========== SUBMIT BUTTON ========== */
+.featured h2 {font-weight: 700; font-size: 2em; color:#c1d831;}
+.featured h4 {
+  font-weight: 100; 
+  font-size: 2em; 
+  padding-bottom: .5em;
+  }
+  
+.feature-callout, .feature-description { text-align: center; }
+.feature-description { padding-bottom: 2em;}
+
+
 /* ========== FESTIVAL DETAILS  ========== */
-.description-container { 
+/*.description-container { 
   position:relative; 
   margin-top: 1.5em;
 }
@@ -188,7 +200,7 @@ a.navbar-brand {padding-right: 1em;}
   width: 100%;
   border: 1px solid #ccc;
   box-shadow: 0 0 3px gray;
-}
+}*/
 
 
 /* ========== MAP  ========== */
@@ -400,8 +412,8 @@ Phones (<768px)
     margin-right: 0;
   }
   .container {
-    padding-left: 2%;
-    padding-right: 2%;
+    padding-left: 4%;
+    padding-right: 4%;
   }
   .sponsor {
     max-width: 80%;
